--- a/doubts.css
+++ b/doubts.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f2f2f2;
+    background-image: url('doubts.jpeg'); /* Replace 'background-image.jpg' with the path to your image */
+    background-size: cover; /* This ensures the background image covers the entire viewport */
+    background-repeat: no-repeat; /* Prevent the background image from repeating */
+    background-attachment: fixed; /* Keeps the background image fixed when scrolling */
 }
 
 .container {
